--- a/index.html
+++ b/index.html
@@ -277,12 +277,10 @@ function parseCatalogText(text) {
   const lines = text.split("\n").map(l => l.trim()).filter(Boolean);
   return lines.map(line => {
     const parts = line.split(",").map(p => p.trim());
-    const cats = parts.slice(3).filter(Boolean); // grab all categories starting from 4th column
-    return { folder: parts[0], raw: parts[1], thumb: parts[2], categories: cats };
+    return { folder: parts[0], raw: parts[1], thumb: parts[2], category: parts[3] || ""};
   }).filter(e => e.folder && e.raw && e.thumb)
     .sort((a,b)=>a.folder.localeCompare(b.folder));
 }
-
 
 function getCurrentPool() { 
   return filteredCatalog; // no fallback to full catalog
@@ -293,14 +291,14 @@ function handleSearch(input) {
   const term = input.trim().toLowerCase();
   const pool = catalog.filter(item => {
     if (currentIdolFilter && item.folder !== currentIdolFilter) return false;
-    if (currentCategoryFilter && !item.categories.includes(currentCategoryFilter)) return false;
+    if (currentCategoryFilter && item.category !== currentCategoryFilter) return false;
     return true;
   });
 
   if (!term) {
     filteredCatalog = pool;
     const availableIdols = [...new Set(pool.map(it => it.folder))].sort();
-    const availableCategories = [...new Set(pool.flatMap(it => it.categories).filter(Boolean))].sort();
+    const availableCategories = [...new Set(pool.map(it => it.category).filter(Boolean))].sort();
     renderIdolButtons(availableIdols);
     renderCategoryButtons(availableCategories);
     renderCatalogThumbnails();
@@ -339,7 +337,7 @@ function selectFolder(folder) {
   // Apply current filters first
   const pool = catalog.filter(item => {
     if (currentIdolFilter && item.folder !== currentIdolFilter) return false;
-    if (currentCategoryFilter && !item.categories.includes(currentCategoryFilter)) return false;
+    if (currentCategoryFilter && item.category !== currentCategoryFilter) return false;
     return true;
   });
 
@@ -357,29 +355,28 @@ function applyFilters() {
   // Filter catalog based on current idol/category filters AND search term
   filteredCatalog = catalog.filter(item => {
     if (currentIdolFilter && item.folder !== currentIdolFilter) return false;
-    if (currentCategoryFilter && !item.categories.includes(currentCategoryFilter)) return false;
+    if (currentCategoryFilter && item.category !== currentCategoryFilter) return false;
     if (currentSearchTerm && !item.folder.toLowerCase().includes(currentSearchTerm)) return false;
     return true;
   });
 
   // Determine buttons to show
   let idolsForButtons = [...new Set(catalog.map(it => it.folder))].sort();
-  let categoriesForButtons = [...new Set(catalog.flatMap(it => it.categories).filter(Boolean))].sort();
+  let categoriesForButtons = [...new Set(catalog.map(it => it.category).filter(Boolean))].sort();
 
   // Apply asymmetric filtering
   if (firstSelection === "idol" && currentIdolFilter) {
     categoriesForButtons = [...new Set(
       catalog.filter(it => it.folder === currentIdolFilter)
-             .flatMap(it => it.categories)
+             .map(it => it.category)
              .filter(Boolean)
     )].sort();
   } else if (firstSelection === "category" && currentCategoryFilter) {
     idolsForButtons = [...new Set(
-      catalog.filter(it => it.categories.includes(currentCategoryFilter))
+      catalog.filter(it => it.category === currentCategoryFilter)
              .map(it => it.folder)
     )].sort();
   }
-
 
   // Apply search term only to idols
   if (currentSearchTerm) {
@@ -391,11 +388,13 @@ function applyFilters() {
   if (currentIdolFilter) {
     categoriesForButtons = [...new Set(
       catalog.filter(it => it.folder === currentIdolFilter)
-             .flatMap(it => it.categories)
+             .map(it => it.category)
              .filter(Boolean)
     )].sort();
+  } else if (visibleCategories.length) {
+    categoriesForButtons = visibleCategories.slice(); // keep categories visible after search
   }
-  
+
 
 
   renderIdolButtons(idolsForButtons);
@@ -489,9 +488,7 @@ function renderIdolButtons(list = null) {
 function renderCategoryButtons(list = null) {
   categoryPanel.innerHTML = "";
   
-  const catsSet = new Set();
-  (list || catalog).forEach(it => it.categories.forEach(c => catsSet.add(c)));
-
+  const catsSet = new Set(list || catalog.map(it => it.category).filter(Boolean));
   
   // Keep original order from categories.txt
   const cats = categoryOrder.filter(cat => catsSet.has(cat));
@@ -549,12 +546,12 @@ function applySearch(term) {
   // Filter catalog based on current filters AND search term
   filteredCatalog = catalog.filter(item => {
     if (currentIdolFilter && item.folder !== currentIdolFilter) return false;
-    if (currentCategoryFilter && !item.categories.includes(currentCategoryFilter)) return false;
+    if (currentCategoryFilter && item.category !== currentCategoryFilter) return false;
     return item.folder.toLowerCase().includes(currentSearchTerm);
   });
 
   // Save the categories visible after search
-  visibleCategories = [...new Set(filteredCatalog.flatMap(it => it.categories).filter(Boolean))].sort();
+  visibleCategories = [...new Set(filteredCatalog.map(it => it.category).filter(Boolean))].sort();
 
   // Update idols and categories
   const availableIdols = [...new Set(filteredCatalog.map(it => it.folder))].sort();
@@ -578,7 +575,7 @@ async function loadCatalog() {
 
   catalog = parseCatalogText(txt1 + "\n" + txt2);
   filteredCatalog = catalog.slice();
-  categories = [...new Set(catalog.flatMap(it => it.categories).filter(Boolean))];
+  categories = [...new Set(catalog.map(it => it.category).filter(Boolean))];
 
   renderIdolButtons([...new Set(catalog.map(it=>it.folder))]);
   renderCategoryButtons(categories);
