--- a/index.html
+++ b/index.html
@@ -492,16 +492,19 @@ function renderIdolButtons(list = null) {
 
 function renderCategoryButtons(list = null) {
   categoryPanel.innerHTML = "";
-  
+
+  // Create set of categories to show
   const catsSet = new Set(
     list || catalog.flatMap(it => it.categories).filter(Boolean)
   );
 
-  
-  // Keep original order from categories.txt
-  const cats = categoryOrder.filter(cat => catsSet.has(cat));
-  
-  cats.forEach(cat => {
+  // Respect the original order from categories.txt, but include any missing categories at the end
+  const catsInOrder = categoryOrder.filter(cat => catsSet.has(cat));
+  const extraCats = [...catsSet].filter(cat => !categoryOrder.includes(cat)).sort(); // alphabetically
+
+  const finalCats = catsInOrder.concat(extraCats);
+
+  finalCats.forEach(cat => {
     const btn = document.createElement("button");
     btn.className = "category-btn";
     btn.textContent = cat;
@@ -509,14 +512,15 @@ function renderCategoryButtons(list = null) {
     btn.onclick = () => {
       if (!firstSelection) firstSelection = "category"; // mark first click
       currentCategoryFilter = currentCategoryFilter === cat ? null : cat;
-    
+
       if (!currentIdolFilter && !currentCategoryFilter) firstSelection = null;
-    
+
       applyFilters();
     };
     categoryPanel.appendChild(btn);
   });
 }
+
 
 
 // Show suggestions while typing
